--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
+<head>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<meta name="author" content="Hannah Reynolds">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
+<link rel="stylesheet" href="style1.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"> 
+<title>About Hannah Reynolds</title>
 <script src=""></script>
-
+<head>
 
 	<!--- Code above this line will not be displayed on the browser --> 
 
 	<body>
 
-		<p> Hello world! 
-		My name is Hannah Reynolds </p>
+		<div class="topnav"> 
+
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Job Experience</a></li>
+			<li><a href="#">Volunteer Experience</a></li>
+			<li><a href="#">Interests</a></li>
+	
+		</ul>
+	</div>
+
+		<h1><b>Welcome!</b></h1>
+		<h2><b> This website is all about me, Hannah Reynolds! Learn more about me and my professional experiences here.</b></h2>
+		<img src="headshot.jpeg" alt="Photo of Hannah Reynolds" style="width:30%;">
+
+		
+		<p> My name is Hannah Reynolds and I am a senior at the University of Wisconsin-Madison. I am working on obtaining a Community & Nonprofit Leadership degree with a minor in Global Health and Digital Studies. Through my countless hours of volunteer work with the Leukemia Lymphoma Society, I found my passion for nonprofits. I was able to learn skills such as networking, public speaking, planning meetings, and more through the nonprofit. Finally, spending a semester studying abroad in London I have gained international work and course experience to build a more diverse background. Through all of my involvement, I have still been able to maintain an above average GPA. </p>
 
 	</body>
 
