--- a/jobexperience.html
+++ b/jobexperience.html
@@ -18,10 +18,10 @@
 		<div class="topnav"> 
 
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Job Experience</a></li>
-			<li><a href="#">Volunteer Experience</a></li>
-			<li><a href="#">Interests</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="jobexperience.html">Job Experience</a></li>
+			<li><a href="volunteerexperience.html">Volunteer Experience</a></li>
+			<li><a href="interests.html">Interests</a></li>
 	
 		</ul>
 	</div>
