--- a/Interests.html
+++ b/Interests.html
@@ -19,7 +19,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="jobexperience.html">Job Experience</a></li>
 			<li><a href="volunteerexperience.html">Volunteer Experience</a></li>
-			<li><a href="interests.html">Interests</a></li>
+			<li><a href="Interests.html">Interests</a></li>
 	
 		</ul>
 	</div>
