--- a/interests.html
+++ b/interests.html
@@ -26,11 +26,11 @@
 
 <h1><b>Hannah's Interests</b></h1>
 
-<span class="b"><b>Swimming!</b><img src="swim.jpg" alt="Photo of Hannah swimming in the Amalfi Coast, Italy." style="width:100%;"></span> 
+<span class="b"><b>Swimming!</b><img src="swim.JPG" alt="Photo of Hannah swimming in the Amalfi Coast, Italy." style="width:100%;"></span> 
 
-<span class="b"><b>Trying New Foods!</b><img src="food.jpg" alt="Photo of Hannah's boyfriend eating BBQ food." style="width:100%;"></span> 
+<span class="b"><b>Trying New Foods!</b><img src="food.JPG" alt="Photo of Hannah's boyfriend eating BBQ food." style="width:100%;"></span> 
 
-<span class="b"><b>Traveling!</b><img src="travel.jpg" alt="Photo of Hannah Reynolds in Amalfi Coast, Italy" style="width:100%;"></span>
+<span class="b"><b>Traveling!</b><img src="travel.JPG" alt="Photo of Hannah Reynolds in Amalfi Coast, Italy" style="width:100%;"></span>
 	
 
 
